[gd_scene load_steps=9 format=3 uid="uid://buc4ei3c7xex1"]

[ext_resource type="Script" path="res://Sub Scenes/Player_Bird/Player_Bird.gd" id="1_ndyin"]
[ext_resource type="Texture2D" uid="uid://28v4ug0v4asp" path="res://Visuals/Placeholder Graphics/protoBody.png" id="2_n24d5"]
[ext_resource type="Script" path="res://Sub Scenes/Player_Bird/Player_Head.gd" id="3_5rfmh"]
[ext_resource type="Texture2D" uid="uid://puopyleeq7w4" path="res://Visuals/Placeholder Graphics/ProtoHead.png" id="4_vqpuj"]

[sub_resource type="CircleShape2D" id="CircleShape2D_yqvkn"]
radius = 15.5322

[sub_resource type="CircleShape2D" id="CircleShape2D_j1d5r"]
radius = 16.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8hd72"]
radius = 9.0
height = 26.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lqft6"]
radius = 9.0
height = 26.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_ndyin")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" groups=["player"]]
position = Vector2(0.5, 4.37114e-08)
rotation = -3.14159
shape = SubResource("CircleShape2D_yqvkn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["player"]]
scale = Vector2(1, 0.989341)
shape = SubResource("CircleShape2D_j1d5r")

[node name="Sprite2D" type="Sprite2D" parent="CollisionShape2D" groups=["player"]]
texture = ExtResource("2_n24d5")

[node name="head" type="CharacterBody2D" parent="." groups=["player"]]
script = ExtResource("3_5rfmh")
angle_padding = 90

[node name="beak_area" type="Area2D" parent="head" groups=["eater"]]
position = Vector2(0, -30)

[node name="CollisionShape2D" type="CollisionShape2D" parent="head/beak_area"]
shape = SubResource("CapsuleShape2D_8hd72")

[node name="CollisionShape2D" type="CollisionShape2D" parent="head" groups=["player"]]
position = Vector2(0, -30)
shape = SubResource("CapsuleShape2D_lqft6")
disabled = true

[node name="Sprite2D" type="Sprite2D" parent="head/CollisionShape2D" groups=["player"]]
texture = ExtResource("4_vqpuj")

[node name="debugger_satiation" type="Label" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 23.0

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="area_entered" from="head/beak_area" to="." method="_on_beak_area_area_entered"]
